--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Penguin Fashion</title>
 
 </head>
-<body class="">
+<body>
     <main class="container bg-white">
         <section class="bg-color">
             <header>
